made a cool button on my start page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <body>
 
   <main>
-    <a href="todo.html"> Create My To-Do List </a>
+      <a href="todo.html">
+        <button class="gotopage">Create My To-Do List</button>
+      </a>
   </main>
 
   <!-- Add JavaScript File -->
