--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 <body>
 
   <main>
-      <a href="todo.html">
-        <button class="gotopage">Create My To-Do List</button>
-      </a>
-  </main>
+        <button class="gotopage"><a href="todo.html">Create My To-Do List</a></button>
+  </main> 
 
   <!-- Add JavaScript File -->
   <script src="./script.js"></script>
