w3c is yelling at me idk what it wants me to do

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 <body>
 
   <main>
+    <a href="todo.html">
+      <button class="gotopage">Create My To-Do List</button>
+    </a>
+    
+    OR 
+
     <button class="gotopage"><a href="todo.html">Create My To-Do List</a></button>
   </main> 
 
