shout out to neil for curing my brainfart

--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
 <body>
 
   <main>
-    <a href="todo.html">
-      <button class="gotopage">Create My To-Do List</button>
-    </a>
-    
-    OR 
-
-    <button class="gotopage"><a href="todo.html">Create My To-Do List</a></button>
+    <a href="todo.html" class="gotopage">Create My To-Do List</a>
   </main> 
 
   <!-- Add JavaScript File -->
